Se arregla funcionamiento de los movimientos de inventario

--- a/suppharmacy/templates/picking/form.html
+++ b/suppharmacy/templates/picking/form.html
@@ -74,7 +74,12 @@
                                 </svg>
                             </a>
                         </th>
-                        <th style="width: 2%;"></th>
+                        <th style="width: 2%;">
+                            <a>
+                                <svg class="me-2" width="16" height="16">
+                                </svg>
+                            </a>
+                        </th>
                         <th style="width: 32%;">Producto</th>
                         <th style="width: 32%;">Lote</th>
                         <th style="width: 32%;">Cantidad</th>
