--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -90,7 +90,12 @@
                                 </svg>
                             </a>
                         </th>
-                        <th style="width: 2%;"></th>
+                        <th style="width: 2%;">
+                            <a>
+                                <svg class="me-2" width="16" height="16">
+                                </svg>
+                            </a>
+                        </th>
                         <th style="width: 16%;">Producto</th>
                         <th style="width: 16%;">Cantidad</th>
                         <th style="width: 16%;">Precio Unitario</th>
