--- a/suppharmacy/templates/partner/form.html
+++ b/suppharmacy/templates/partner/form.html
@@ -47,6 +47,12 @@
                     <span class="input-group-text">Correo Electrónico</span>
                     <input class="form-control" type="text" v-model="partner.email">
                 </div>
+                <div class="input-group m-3">
+                    <span class="input-group-text">Cliente</span>
+                    <div class="input-group-text">
+                        <input class="form-check-input mt-0" type="checkbox" v-model="partner.customer" >
+                    </div>
+                </div>
             </div>
             <div class="col-6">
                 <div class="input-group m-3">
@@ -68,6 +74,12 @@
                 <div class="input-group m-3">
                     <span class="input-group-text">País</span>
                         <input class="form-control" type="text" v-model="partner.country">
+                </div>
+                <div class="input-group m-3">
+                    <span class="input-group-text">Proveedor</span>
+                    <div class="input-group-text">
+                        <input class="form-check-input mt-0" type="checkbox" v-model="partner.supplier" >
+                    </div>
                 </div>
             </div>
         </div>
