Se agrega la funcionalidad de argumentos en la consulta de los campos relacionales

--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -53,6 +53,7 @@
                     table="partner"
                     :initial="sale.partner_id"
                     @value-changed="partnerChange"
+                    :args="['customer', '=', true]"
                     :disabled="disabledFieldsNotDraft"
                 ></field-relational>
             </div>
