Se agrega codigo en la venta para generar folio

--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -39,7 +39,7 @@
                 <div class="input-group m-3">
                     <span class="input-group-text">Nombre</span>
                     <input class="form-control" type="text" v-model="sale.name"
-                        :disabled="disabledFieldsNotDraft"/>
+                        disabled/>
                 </div>
                 <div v-if="disabledFieldsNotDraft" class="input-group m-3">
                     <span class="input-group-text">Cliente</span>
