Se agregan bloqueo de campos en base al estado, se agregan 2 metodos en el picking

--- a/suppharmacy/templates/picking/form.html
+++ b/suppharmacy/templates/picking/form.html
@@ -18,7 +18,7 @@
             <a href="#" class="btn btn-outline-info m-1" @click="discard">Descartar</a>
         </div>
         <div class="col-1 ms-auto text-center fs-4">
-            <span class="badge text-bg-secondary">[[  nameState  ]]</span>
+            <span class="badge text-bg-secondary">[[ nameState ]]</span>
         </div>
         <div class="col-1">
             <a v-if="picking.id != 0" href="#" class="btn btn-danger m-1" @click="deletePicking">Borrar</a>
@@ -26,19 +26,47 @@
     </div>
     <!-- Body -->
     <div class="form-body">
+        <div class="row ms-1">
+            <div v-if="picking.state == 'draft'" class="col-2">
+                <button type="button" class="btn btn-info m-1"
+                    @click="actionConfirm">
+                    Confirmar
+                </button>
+            </div>
+            <div v-if="picking.state == 'ready'" class="col-2">
+                <button type="button" class="btn btn-info m-1"
+                    @click="actionValidate">
+                    Validar
+                </button>
+            </div>
+        </div>
         <div class="row">
             <div class="col-6">
                 <div class="input-group m-3">
                     <span class="input-group-text">Nombre</span>
-                    <input class="form-control" type="text" v-model="picking.name"/>
+                    <input class="form-control" type="text" v-model="picking.name"
+                        disabled/>
                 </div>
-                <field-relational
-                    string="Partner"
-                    field="name"
-                    table="partner"
-                    :initial="picking.partner_id"
-                    @value-changed="partnerChange"
-                ></field-relational>
+                <div v-if="picking.type_picking != 'expired'">
+                    <div v-if="disabledFieldsNotDraft" class="input-group m-3">
+                        <span class="input-group-text">[[ partnerString ]]</span>
+                        <input class="form-control" type="text" v-model="picking.partner_name"
+                            disabled/>
+                    </div>
+                    <field-relational
+                        v-else
+                        :string="partnerString"
+                        field="name"
+                        table="partner"
+                        :initial="picking.partner_id"
+                        @value-changed="partnerChange"
+                    ></field-relational>
+                </div>
+                <div class="input-group m-3">
+                    <span class="input-group-text">Tipo</span>
+                    <input class="form-control" type="text" v-model="nameType"
+                        disabled/>
+                </div>
             </div>
             <div class="col-6">
                 <div class="input-group input-group-date m-3">
@@ -51,10 +79,17 @@
                         cancel-text="Cancelar"
                         v-model="picking.date"
                         locale="es"
-                        format="dd/MM/yyyy">
+                        format="dd/MM/yyyy"
+                        :disabled="disabledFieldsNotDraft">
                     </date-picker>
                 </div>
+                <div v-if="disabledFieldsNotDraft" class="input-group m-3">
+                    <span class="input-group-text">Usuario</span>
+                    <input class="form-control" type="text" v-model="picking.user_name"
+                        disabled/>
+                </div>
                 <field-relational
+                    v-else
                     string="Usuario"
                     field="name"
                     table="user"
@@ -68,9 +103,13 @@
                 <thead class="text-bg-dark">
                     <tr style="display: block;">
                         <th style="width: 2%;">
-                            <a href="#" @click="openMove(0)">
+                            <a v-if="!disabledFieldsNotReady" href="#" @click="openMove(0)">
                                 <svg class="bi bi bi-plus-square me-2" width="16" height="16">
                                     <image xlink:href="{% static 'img/icons/plus-square.svg' %}"/>
+                                </svg>
+                            </a>
+                            <a v-else>
+                                <svg class="me-2" width="16" height="16">
                                 </svg>
                             </a>
                         </th>
@@ -92,7 +131,6 @@
         </div>
     </div>
     <modal-move :visible="visibleModalMove" :move="modalMove"></modal-move>
-    <span>[[visibleModalMove]]</span>
 </div>
 
 {% endblock %}
