Se completa el proceso de la venta, para la afeccion de inventario

--- a/suppharmacy/templates/purchase/form.html
+++ b/suppharmacy/templates/purchase/form.html
@@ -108,7 +108,7 @@
                                 </svg>
                             </a>
                         </th>
-                        <th style="width: 16%;">Producto</th>
+                        <th style="width: 16%;">Medicamento</th>
                         <th style="width: 16%;">Cantidad</th>
                         <th style="width: 16%;">Precio Unitario</th>
                         <th style="width: 16%;">Impuesto</th>
