--- a/suppharmacy/templates/purchase/list.html
+++ b/suppharmacy/templates/purchase/list.html
@@ -117,7 +117,7 @@
                     <th style="width: 18%;"
                         :class="orderFieldClass.partner_name"
                         @click="changeOrder('partner_id.name')">
-                        Cliente
+                        Proveedor
                     </th>
                     <th style="width: 17%;"
                         :class="orderFieldClass.user_name"
