--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -56,6 +56,13 @@
                     :args="['customer', '=', true]"
                     :disabled="disabledFieldsNotDraft"
                 ></field-relational>
+                <div v-if="disabledFieldsNotDraft" class="input-group m-3">
+                    <span class="input-group-text">Movimiento Inventario</span>
+                    <input class="form-control" type="text" v-model="sale.picking_name"
+                        disabled/>
+                    <a :href="`/stock/${sale.picking_id}`" class="btn btn-outline-secondary"
+                        @click="toggleModalPassword">Ver</a>
+                </div>
             </div>
             <div class="col-6">
                 <div class="input-group input-group-date m-3">
