Se agrega boton de ver origen en la vista de picking

--- a/suppharmacy/templates/picking/form.html
+++ b/suppharmacy/templates/picking/form.html
@@ -100,6 +100,8 @@
                     <span class="input-group-text">Origen</span>
                     <input class="form-control" type="text" v-model="origin"
                         disabled/>
+                    <a :href="urlOrigin" class="btn btn-outline-secondary"
+                        @click="toggleModalPassword">Ver</a>
                 </div>
             </div>
         </div>
