Al confirmar la venta, se regresa mensaje de los lotes que debe tomar el usuario

--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -143,6 +143,7 @@
         </div>
     </div>
     <modal-line :visible="visibleModalLine" :line="modalLine"></modal-line>
+    <modal-msg :visible="visibleModalConfirmation" :msg="msgConfirmation" :callback="msgCallback"></msg-confirmation>
 </div>
 
 {% endblock %}
