Se cambian todos los textos que dicen producto a medicamento

--- a/suppharmacy/templates/picking/form.html
+++ b/suppharmacy/templates/picking/form.html
@@ -126,7 +126,7 @@
                                 </svg>
                             </a>
                         </th>
-                        <th :style="`width: ${colSize}%;`">Producto</th>
+                        <th :style="`width: ${colSize}%;`">Medicamento</th>
                         <th :style="`width: ${colSize}%;`">Lote</th>
                         <th v-if="isTypePurchase" :style="`width: ${colSize}%;`">Fecha Caducidad</th>
                         <th :style="`width: ${colSize}%;`">Cantidad</th>
