--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -116,7 +116,7 @@
                                 </svg>
                             </a>
                         </th>
-                        <th style="width: 16%;">Producto</th>
+                        <th style="width: 16%;">Medicamento</th>
                         <th style="width: 16%;">Cantidad</th>
                         <th style="width: 16%;">Precio Unitario</th>
                         <th style="width: 16%;">Impuesto</th>
