cambios esteticos en picking y purchase

--- a/suppharmacy/templates/picking/list.html
+++ b/suppharmacy/templates/picking/list.html
@@ -120,7 +120,7 @@
                         Usuario
                     </th>
                     <th style="width: 17%;"
-                        :class="orderFieldClass.user_name"
+                        :class="orderFieldClass.type_picking"
                         @click="changeOrder('type_picking')">
                         Tipo
                     </th>
