Se añade filtro por tipo de picking, y se comenta el filtro por usuario

--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -8,8 +8,7 @@
 
     <!-- CSS Libs -->
     <!-- Boostrap -->
-    <link rel="stylesheet" href="{% static 'css/lib/bootstrap.css' %}"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD">
+    <link rel="stylesheet" href="{% static 'css/lib/bootstrap.css' %}">
    <!-- Vue Datepicker -->
     <link rel="stylesheet" href="{% static 'css/lib/vuejs-datepicker.css' %}">
 
@@ -43,7 +42,6 @@
     {% block javascript %}{% endblock %}
 
     <!-- Bootstrap JS -->
-    <script src="{% static 'js/lib/bootstrap.js' %}"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"></script>
+    <script src="{% static 'js/lib/bootstrap.js' %}"></script>
 </body>
 </html>
