--- a/suppharmacy/templates/picking/list.html
+++ b/suppharmacy/templates/picking/list.html
@@ -19,11 +19,23 @@
         </div>
         <div class="col-2">
             <div class="input-group">
+                <span class="input-group-text">Tipo</span>
+                <select class="form-control" v-model="typeFilter"
+                    @change="fetchPickings()">
+                    <option value=""></option>
+                    <option value="purchase">Ingreso</option>
+                    <option value="expired">Expirado</option>
+                    <option value="sale">Salida</option>
+                </select>
+            </div>
+        </div>
+        <!-- <div class="col-2">
+            <div class="input-group">
                 <span class="input-group-text">Usuario</span>
                 <input class="form-control" type="text" v-model="userFilter"
                     @change="fetchPickings()"/>
             </div>
-        </div>
+        </div> -->
         <div class="col-3">
             <div class="input-group input-group-date">
                 <span class="input-group-text">Fecha</span>
