En la venta cuando algun medicamento es antibiotico, se restringe si no se activa el campo de que se ha solicitado la receta

--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -93,6 +93,12 @@
                     @value-changed="userChange"
                     :disabled="disabledFieldsNotDraft"
                 ></field-relational>
+                <div v-if="sale.requires_prescription" class="input-group m-3">
+                    <span class="input-group-text">Receta</span>
+                    <div class="input-group-text">
+                        <input class="form-check-input mt-0" type="checkbox" v-model="sale.prescription" >
+                    </div>
+                </div>
             </div>
         </div>
         <div >
