Se añade columna para cantidad dentro de la vista de lista de productos

--- a/suppharmacy/templates/product/list.html
+++ b/suppharmacy/templates/product/list.html
@@ -84,6 +84,7 @@
                     <th :class="orderFieldClass.name" @click="changeOrder('name')">Nombre</th>
                     <th :class="orderFieldClass.code" @click="changeOrder('code')">Código</th>
                     <th :class="orderFieldClass.presentation" @click="changeOrder('presentation')">Presentación</th>
+                    <th :class="orderFieldClass.quantity" @click="changeOrder('quantity')">Cantidad</th>
                     <th :class="orderFieldClass.is_antibiotic" @click="changeOrder('is_antibiotic')">Antibiótico</th>
                 </tr>
             </thead>
