Correcion de pequeños errores

--- a/suppharmacy/templates/purchase/form.html
+++ b/suppharmacy/templates/purchase/form.html
@@ -59,8 +59,7 @@
                     <span class="input-group-text">Movimiento Inventario</span>
                     <input class="form-control" type="text" v-model="purchase.picking_name"
                         disabled/>
-                    <a :href="`/stock/${purchase.picking_id}`" class="btn btn-outline-secondary"
-                        @click="toggleModalPassword">Ver</a>
+                    <a :href="`/stock/${purchase.picking_id}`" class="btn btn-outline-secondary">Ver</a>
                 </div>
             </div>
             <div class="col-6">
