--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -60,8 +60,7 @@
                     <span class="input-group-text">Movimiento Inventario</span>
                     <input class="form-control" type="text" v-model="sale.picking_name"
                         disabled/>
-                    <a :href="`/stock/${sale.picking_id}`" class="btn btn-outline-secondary"
-                        @click="toggleModalPassword">Ver</a>
+                    <a :href="`/stock/${sale.picking_id}`" class="btn btn-outline-secondary">Ver</a>
                 </div>
             </div>
             <div class="col-6">
